--- a/style.css
+++ b/style.css
@@ -19,11 +19,10 @@ body {
 h2{
   border-top: 1px solid #fff;
 }
-  
 
 .name{
   display: flex;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .name h1:last-child{
@@ -52,23 +51,24 @@ h2{
   
   #apresentacao .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     text-align: left;
     gap: 2rem;
     align-items: center;
     justify-content: center;
   }
-  
-  #apresentacao img {
-    max-width: 300px;
-    border-radius: 12px;
+
+  #apresentacao img{
+    border-radius: 10px;
+    width: 15rem;
   }
-  
+
+
   .skills {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 30px;
+    justify-content: space-around;
+    gap: 20px;
     margin-top: 20px;
   }
   
@@ -81,7 +81,7 @@ h2{
   }
   
   .skill-item i {
-    font-size: 40px;
+    font-size: 30px;
     transition: transform 0.3s ease;
   }
   
